--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.buttons{
+.virtual_button{
   left:80px;
   bottom:80px;
   width: 30vw;
@@ -7,7 +7,7 @@
   display:fixed;
 }
 
-.buttons div{
+.virtual_button div{
   width: 100%;
   height: 100%;
   background-size: contain;
