--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 }
 
 .virtual_button div{
-  width: 100%;
-  height: 100%;
+  width: 30vw;
+  height: 30vw;
   background-size: contain;
   position:fixed;
 }
